--- a/Predrag_Djokic/Views/Racun/Index.cshtml
+++ b/Predrag_Djokic/Views/Racun/Index.cshtml
@@ -26,7 +26,7 @@
 
 @foreach (var item in Model) {
 
-    <tr  style="background-color="green")>
+    <tr  style="background-color: @(item.Aktivan ? "green" : "red")">
         <td>
             @Html.DisplayFor(modelItem => item.BrojRacuna)
         </td>
@@ -42,82 +42,29 @@
             @(item.Aktivan ? "Da" : "Ne")
         </td>
         <td>
-            @Html.ActionLink("Otvori", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Izmeni", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Obrisi", "Delete", new { id = item.Id }) |
+            @Html.ActionLink("Otvori", "Details", new { id = item.Id }, new {style="color: white" }) |
+            @Html.ActionLink("Izmeni", "Edit", new { id = item.Id }, new { style = "color: white" }) |
+            @Html.ActionLink("Obrisi", "Delete", new { id = item.Id }, new { style = "color: white" }) |
        
+             @Html.ActionLink((item.Aktivan ? "Deaktiviraj" : "Aktiviraj"), "ToggleStatus", new { id = item.Id }, new { style = "color: white" })
 
 
-            
-            @if (item.Aktivan)
+            @*@if (item.Aktivan)
             {
-                @Html.ActionLink("Deaktiviraj", "Details", new { id = item.Id });
+                @Html.ActionLink("Deaktiviraj", "ToggleStatus", new { id = item.Id }, new { style = "color: white" });
             }
             else
             {
 
-                @Html.ActionLink("Aktiviraj", "Details", new { id = item.Id });
+                @Html.ActionLink("Aktiviraj", "ToggleStatus", new { id = item.Id }, new { style = "color: white" });
 
-            }
+            }*@
         </td>
     </tr>
 }
 
 </table>
 @Html.Partial("_Create", new Predrag_Djokic.Models.Racun())
-
-<!--CREATE DEO VIEW-a-->
-
-@*<h2>Create</h2>
-
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>Racun</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.NosilacRacuna, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NosilacRacuna, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NosilacRacuna, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Aktivan, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Aktivan)
-                    @Html.ValidationMessageFor(model => model.Aktivan, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.OnlineBanking, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.OnlineBanking)
-                    @Html.ValidationMessageFor(model => model.OnlineBanking, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
